# mpmahj

./: .clocignore  .env.example  .gitignore  .markdownlint.json  .markdownlintignore  .prettierignore  Agent.md  Agents.md  CLAUDE.md  CLAUDE_SESSION_NOTES.md  CODE_REVIEW_ACTION_PLAN.md  CODE_REVIEW_REPORT.md  Cargo.toml  Claude.md  HAIKU-TRIMMING-COMPLETION-REPORT.md  INCOMPLETE_WORK_AUDIT.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PLANNING.md  README-ARCH.md  README-STEROIDS.md  README.md  SETUP.md  SQLX_OFFLINE_FIX_PLAN.md  TODO-BACKEND-VOTING.md  TODO.md  UNWRAP_AUDIT.md  US-005-SCOPE.md  cloc-latest-report.txt  cloc-report.txt  copy-transparent-tiles.sh  eslint.config.js  events_index.json  knip-root.json  knip.json  lcov.info  mahjong-rules.md  nmjl_mahjong_2025_card.md  nmjl_mahjongg-rules.md  nmjl_mahjongg_2025_card.md  package-lock.json  (+14 more)
crates/mahjong_ai/: Cargo.toml  TESTING_PRUNING.md
crates/mahjong_ai/benches/: ai_benchmarks.rs  analysis_performance.rs  hint_advisor_bench.rs  mcts_pruning_bench.rs
crates/mahjong_ai/bindings/: PatternDifficulty.ts  StrategicEvaluation.ts
crates/mahjong_ai/examples/: bot_tournament.rs  compare_pruning.rs  mcts_pruning.rs
crates/mahjong_ai/src/: context.rs  evaluation.rs  lib.rs  probability.rs  test_utils.rs  trait.rs
crates/mahjong_ai/src/hint/: mod.rs
crates/mahjong_ai/src/mcts/: engine.rs  mod.rs  node.rs  simulation.rs
crates/mahjong_ai/src/strategies/: greedy.rs  mcts_ai.rs  mod.rs  random.rs
crates/mahjong_core/: Cargo.toml  DESIGN.md
crates/mahjong_core/benches/: validation_bench.rs
crates/mahjong_core/examples/: bot_game.rs  validate_hand.rs
crates/mahjong_core/src/: bot_utils.rs  call_resolution.rs  command.rs  deck.rs  event.rs  flow.rs  hand.rs  hint.rs  history.rs  lib.rs  meld.rs  player.rs  scoring.rs  snapshot.rs  table.rs  test_utils.rs  tile.rs
crates/mahjong_core/src/bot/: basic.rs  mod.rs
crates/mahjong_core/src/event/: analysis_events.rs  helpers.rs  mod.rs  private_events.rs  public_events.rs  tests.rs  types.rs
crates/mahjong_core/src/flow/: _index.json  _index.schema.json  mod.rs  outcomes.rs  playing.rs
crates/mahjong_core/src/rules/: card.rs  mod.rs  validator.rs
crates/mahjong_core/tests/: bot_basic.rs  call_priority.rs  charleston_flow.rs  hint_event_privacy.rs  history_test.rs  joker_strict_test.rs  phase1_win_call_flow.rs  phase2_meld_validation.rs  phase3_joker_rules.rs  phase4_dead_hand_rules.rs  phase5_charleston_rules.rs  scoring_integration.rs  timer_behavior.rs  turn_flow.rs  unified_card_integration.rs  wall_state_persistence.rs
crates/mahjong_server/: .env.example  Cargo.toml
crates/mahjong_server/.cargo/: config.toml
crates/mahjong_server/.sqlx/: query-0a830a262df55cb0b804bce97f0b38019c678713a1f86a384753cd550c48af79.json  query-22177dfd237776260e6d7839c7d14bb384f95a407a0e7e3c0ae06cf0769caaba.json  query-2e5a64c1a944e03306296b1034df739e102ff48ece9a582a4b5ba89d0e2221a0.json  query-68e063c0a5d53b8d44a4f50ea41a076340a1796c483fdbf6deea071d15c2d989.json  query-72150a528c8df3770187addbd0aec6e76b2ba546eb60e34e577a1ed0e4704e48.json  query-7ee584af3a5793d8c6789ead19487d1ab8d5c6c3fef252f6e8e22413e4915eb5.json  query-a3cfa2ab34a588bd416e6e26a3f385e0c9647fddef52f8c6309fac0fd01cb76e.json  query-a6ec58f7259fdb5ba6a6823e2cafc14af58473f8626ad819c397444172feaadb.json  query-b7a172ffd6b85d38225de20b4000be04a2a9b8ff42f542311f5e9c243cc93d26.json  query-cb8b6239306c1cf8bf1ba82aec618dcd4a88955b0753317f9fdf9c37ef459b16.json  query-d1a329b7d48c059ea044ddb2ce9eec8466ac2edc221585412cc54cc91fb20edb.json  query-d331811723c7d87398991466e9e38b8f787ff69d69f4ab768bc8b1a13183bc72.json  query-e2ca6d65e393ce455581b035692aa57a20052ed1a444ba66a6867515105a7db2.json  query-e90504d0c4ea8a2ab63971406766ac069b877194640b2fbc7bd91b7330157bde.json  query-e9f94ae89d80cbf356a701b8c6c613152db9db02caf868167a51e473d556a1ca.json  query-f5d875e5049c88f98a4f78784e8a747de65c7040a9aa28e4cd768f9a26088e88.json
crates/mahjong_server/migrations/: 20260104000001_create_persistence_schema.sql  20260104000002_enable_rls_and_auth.sql  20260107000001_security_fixes.sql  20260108000001_add_wall_state.sql  20260112000001_add_analysis_log.sql  README.md
crates/mahjong_server/src/: analysis.rs  auth.rs  authorization.rs  db.rs  db_simple.rs  event_delivery.rs  lib.rs  main.rs  replay.rs  resources.rs  stats.rs  test_utils.rs
crates/mahjong_server/tests/: TODO_TESTS.md  admin_export_tests.rs  admin_integration_tests.rs  admin_tests.rs  ai_comparison_test.rs  analysis_integration.rs  bot_config_tests.rs  forfeit_tests.rs  full_game_lifecycle.rs  hint_composer_pipeline.rs  hint_request_flow.rs  hint_room_settings.rs  history_error_tests.rs  history_integration_tests.rs  history_stress_tests.rs  history_websocket_e2e.rs  memory_stress_test.rs  network_rate_limits.rs  networking_integration.rs  replay_reconstruction.rs  smart_undo_tests.rs  stall_controls_tests.rs  visibility_tests.rs
crates/mahjong_terminal/: Cargo.toml  PLAN_BOT_SCRIPT_IMPL.md  README.md
crates/mahjong_terminal/src/: bot.rs  client.rs  input.rs  main.rs  ui.rs
(+1312 files in other folders)
