[package]
name = "mahjong_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
mahjong_core = { path = "../mahjong_core" }
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.17"
ts-rs = "10.0"
log = "0.4"

[dev-dependencies]
rand_chacha = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mcts_pruning_bench"
harness = false

[[bench]]
name = "hint_advisor_bench"
harness = false

[[bench]]
name = "ai_benchmarks"
harness = false

[[bench]]
name = "analysis_performance"
harness = false
