[package]
name = "mahjong_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ts-rs = { version = "10.0", features = ["serde-compat"] }
rand = { version = "0.8", features = ["small_rng"] }
thiserror = "2.0"
serde_json = "1.0"
itertools = "0.10"

[dev-dependencies]
