[package]
name = "mahjong_server"
version = "0.1.0"
edition = "2021"

[features]
default = []
database = ["sqlx"]

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = { version = "10.0", features = ["serde-compat", "chrono-impl"] }
mahjong_core = { path = "../mahjong_core" }
mahjong_ai = { path = "../mahjong_ai" }

# Database & Environment
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "macros", "migrate"], optional = true }
dotenvy = "0.15"
thiserror = "2.0"

# Auth & Utilities
# We need 'reqwest' to fetch the keys and 'blocking' to keep startup simple (optional, but async is better)
reqwest = { version = "0.11", features = ["json"] }
# We need support for Elliptic Curve (ES256) which is what P-256 uses
jsonwebtoken = { version = "9.2" }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Networking
futures-util = "0.3"  # For WebSocket stream handling
dashmap = "6.1"       # Concurrent HashMap for room state
uuid = { version = "1.0", features = ["v4", "serde"] }  # Room/session IDs
chrono = { version = "0.4", features = ["serde"] }  # Timestamps for ping/pong
rand = "0.8"          # Random number generation for game seeds

[dev-dependencies]
tokio-tungstenite = "0.21"
url = "2.5"
