[package]
name = "mahjong_terminal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mahjong_terminal"
path = "src/main.rs"

[dependencies]
# Core dependencies
mahjong_core = { path = "../mahjong_core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Terminal UI
crossterm = "0.28"

# CLI arguments
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
