[package]
name = "mahjong_terminal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mahjong_terminal"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = { version = "0.27", features = ["serde", "event-stream"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
mahjong_core = { path = "../mahjong_core" }
mahjong_ai = { path = "../mahjong_ai" }
mahjong_server = { path = "../mahjong_server" }
